; ModuleID = '/home/carl/AnghaBench/git/extr_ll-merge.c_ll_merge_marker_size.c'
source_filename = "/home/carl/AnghaBench/git/extr_ll-merge.c_ll_merge_marker_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.attr_check = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64 }
%struct.index_state = type { i32 }

@ll_merge_marker_size.check = internal global %struct.attr_check* null, align 8
@DEFAULT_CONFLICT_MARKER_SIZE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [21 x i8] c"conflict-marker-size\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ll_merge_marker_size(%struct.index_state* %0, i8* %1) #0 {
  %3 = alloca %struct.index_state*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store %struct.index_state* %0, %struct.index_state** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i32, i32* @DEFAULT_CONFLICT_MARKER_SIZE, align 4
  store i32 %6, i32* %5, align 4
  %7 = load %struct.attr_check*, %struct.attr_check** @ll_merge_marker_size.check, align 8
  %8 = icmp ne %struct.attr_check* %7, null
  br i1 %8, label %11, label %9

9:                                                ; preds = %2
  %10 = call %struct.attr_check* @attr_check_initl(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i32* null)
  store %struct.attr_check* %10, %struct.attr_check** @ll_merge_marker_size.check, align 8
  br label %11

11:                                               ; preds = %9, %2
  %12 = load %struct.index_state*, %struct.index_state** %3, align 8
  %13 = load i8*, i8** %4, align 8
  %14 = load %struct.attr_check*, %struct.attr_check** @ll_merge_marker_size.check, align 8
  %15 = call i32 @git_check_attr(%struct.index_state* %12, i8* %13, %struct.attr_check* %14)
  %16 = load %struct.attr_check*, %struct.attr_check** @ll_merge_marker_size.check, align 8
  %17 = getelementptr inbounds %struct.attr_check, %struct.attr_check* %16, i32 0, i32 0
  %18 = load %struct.TYPE_2__*, %struct.TYPE_2__** %17, align 8
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i64 0
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %36

23:                                               ; preds = %11
  %24 = load %struct.attr_check*, %struct.attr_check** @ll_merge_marker_size.check, align 8
  %25 = getelementptr inbounds %struct.attr_check, %struct.attr_check* %24, i32 0, i32 0
  %26 = load %struct.TYPE_2__*, %struct.TYPE_2__** %25, align 8
  %27 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %26, i64 0
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 0
  %29 = load i64, i64* %28, align 8
  %30 = call i32 @atoi(i64 %29)
  store i32 %30, i32* %5, align 4
  %31 = load i32, i32* %5, align 4
  %32 = icmp sle i32 %31, 0
  br i1 %32, label %33, label %35

33:                                               ; preds = %23
  %34 = load i32, i32* @DEFAULT_CONFLICT_MARKER_SIZE, align 4
  store i32 %34, i32* %5, align 4
  br label %35

35:                                               ; preds = %33, %23
  br label %36

36:                                               ; preds = %35, %11
  %37 = load i32, i32* %5, align 4
  ret i32 %37
}

declare dso_local %struct.attr_check* @attr_check_initl(i8*, i32*) #1

declare dso_local i32 @git_check_attr(%struct.index_state*, i8*, %struct.attr_check*) #1

declare dso_local i32 @atoi(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
